# grid-transform

./: .gitattributes  .gitignore  DATA.md  README.md  average_speaker_grid_transform.py  config.yaml  convert_to_pdf.py  create_speaker_grid.py  method4_transform.py  move_target_articulators.py  pyproject.toml  requirements.txt  warp_source_speaker_to_target.py
VTLN/: 1612_s10_0654.tif
docs/: ARTSPEECH_MAPPING.md  DATA.md  METHOD.md  branch_status.md  release_checklist.md
grid_transform/: __init__.py  analysis_shared.py  annotation_projection.py  annotation_to_grid_workflow.py  annotation_workbench.py  articulators.py  artspeech_video.py  config.py  contour_names.py  curated_batch.py  cv2_annotation_app_config.py  cv2_config_helpers.py  cv2_panels.py  cv2_shared.py  figures.py  fixed_target_stage_overlays.py  image_utils.py  io.py  notebook_bootstrap.py  p3_stage_overlay_variance.py  roi_average_speaker.py  session_warp.py  session_warp_threaded.py  source_annotation.py  transfer.py  transform_helpers.py  vt.py  vt_grid.py  vtln_annotation_sync.py  vtln_bundle.py  vtln_release.py  warp.py  workspace_paths.py
notebooks/: Grid_transformation.ipynb  average_speaker.ipynb
tests/: test_analysis_shared.py  test_annotation_workflow_helpers.py  test_contour_names.py  test_curated_batch.py  test_fixed_target_stage_overlays.py  test_p3_stage_overlay_variance.py  test_roi_average_speaker.py  test_source_annotation_controls.py  test_transfer_helpers.py  test_vt_grid_constraints.py  test_vtln_annotation_sync.py  test_vtln_release.py
vocal-tract-seg/: vt_grid.py
(+182 files in other folders)
